tests/fixtures/invalid/pow_float_float_set.py
# Cannot call pow() with Float, Float, Set[int]
x = pow(1.0, 1.0, {1, 2, 3})
